--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,3 +1,165 @@
 @import "_reset.scss";
 @import "_font.scss";
 @import "_colors.scss";
+@import "_flexbox.scss";
+@import "_grid.scss";
+
+body {
+    margin: auto;
+    padding: 40px 2rem;
+    background: $colorBlue;
+    background: linear-gradient(0deg, $colorBlue 50%, $colorOrangeRed 75%, $colorYellow 100%);
+    color: $fontcolorGray;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    font-size: $fontSizeMain;
+
+}
+
+header {
+    margin: 0.5rem;
+    background: $colorBlack;
+    color: $fontcolorOffWhite;
+    width: 100%;
+    border-radius: 0px 10px;
+}
+
+
+
+main {
+    margin: 1rem 0.75rem 3rem 0.75rem;
+    padding: 0.5rem;
+}
+
+section {
+    margin: 0.5rem;
+    padding: 0.5rem;
+    background-color: $colorBlack;
+    border-radius: 0px 10px;
+
+    p {
+        margin: 0;
+        padding: 0.5rem;
+        font-family: $fontFamilyThird;
+        font-size: $fontSizeThird;
+        text-align: inherit;
+    }
+
+    h3,
+    p {
+        color: $fontcolorOffWhite;
+    }
+}
+
+nav {
+    position: fixed;
+    bottom: 0;
+    margin-top: 2rem;
+    padding-top: 1rem;
+    padding-bottom: 2rem;
+    background: $colorBlue;
+    width: 100%;
+    text-align: center;
+    font-family: $fontSizeMain;
+
+    a {
+        margin: 0.25rem;
+        font-family: inherit;
+        font-size: $fontSizeThird;
+        color: $fontcolorOffWhite;
+    }
+
+    a:hover {
+        background-color: $colorBlack;
+        padding: 0rem 0.5rem;
+    }
+
+    strong {
+        font-family: inherit;
+        font-size: $fontSizeMain;
+    }
+
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    margin: 0.25rem;
+    background: $colorBlue;
+    color: $fontcolorOffWhite;
+    width: 100%;
+    text-align: center;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0.25rem;
+    padding: 0;
+    text-align: inherit;
+}
+
+h1,
+h3,
+h5 {
+    font-family: $fontFamilyMain;
+}
+
+h2,
+h4,
+h6 {
+    font-family: $fontFamilySecond;
+}
+
+h1 {
+    font-size: $fontSizeMain;
+}
+
+h2 {
+    font-size: $fontSizeSecond;
+}
+
+h3 {
+    font-size: $fontSizeThird;
+
+    em {
+        font-family: $fontFamilySecond;
+    }
+
+    strong {
+        font-family: $fontFamilyMain;
+    }
+}
+
+h4 {
+    font-size: $fontSizeForth;
+}
+
+p {
+    margin: 0;
+    padding: 0.5rem;
+    font-family: $fontFamilyThird;
+    font-size: $fontSizeThird;
+    text-align: inherit;
+}
+
+#about {
+    background: $colorBlue;
+    background-size: cover;
+    border-radius: 10px 0px 10px 0px;
+
+    ul {
+        margin: 0.25rem;
+        color: $fontcolorOffWhite;
+        font-family: $fontFamilySecond;
+        font-size: $fontSizeForth;
+        text-align: center;
+
+        li {
+            margin: 0.25rem;
+        }
+    }
+}
