--- a/styles/abstract/_colors.scss
+++ b/styles/abstract/_colors.scss
@@ -3,5 +3,5 @@ $colorOrangeRed: rgb(251, 101, 66,1);
 $colorBlue:rgb(55, 94, 151,1);
 $colorBlack: rgba(0, 0, 0, 0.25);
 
-$fontcolorOffWhite:rgb(227, 222, 201);
-$fontcolorGray:rgb(165, 163, 157);
+$colorOffWhite:rgb(227, 222, 201);
+$colorGray:rgb(165, 163, 157);
