--- a/Media/styles/layout/_grid.scss
+++ b/Media/styles/layout/_grid.scss
@@ -10,12 +10,14 @@
 }
 
 .g-navbar{
-    grid-column: 3;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    gap:2.4rem;
     grid-template-areas: "head head nav";
 }
 
 .g-pre{
     grid-area: press;
+    align-content: center;
 }
 
 .g-pic{
@@ -23,12 +25,13 @@
 }
 
 .g-2obj{
-    grid-column: 3;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    gap:2.4rem;
     grid-template-areas: "press press picture"; 
-    gap:0rem 2.4rem;
 }
 
 .g-3{
     grid-template-columns: auto auto auto;
     gap: 2.4rem;
+    justify-content: space-around;
 }
