--- a/Media/styles/main.css
+++ b/Media/styles/main.css
@@ -57,19 +57,101 @@ html {
 }
 
 body {
-  margin: auto;
+  background-image: url("/Media/Pictures/background.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: top;
+  background-size: cover;
   color: white;
   background-color: #28282B;
+  text-align: left;
 }
 
-article {
-  height: 316px;
-  padding: 2.4rem 2rem;
-  align-content: center;
+.gradient {
+  background: linear-gradient(0deg, rgba(40, 40, 43, 0) 25%, rgba(255, 255, 255, 0.75) 100%);
+}
+
+.blk-100 {
+  background-color: #28282b;
+}
+
+.blk-75 {
+  background-color: rgba(40, 40, 43, 0.75);
+}
+
+.wt-75 {
+  background-color: rgba(237, 237, 242, 0.75);
+}
+
+.t-blk-100 {
+  color: #28282b;
+}
+
+.t-or-75 {
+  color: rgba(254, 102, 1, 0.75);
 }
 
 section {
-  padding: 2.4rem 2rem;
+  margin: 2.4rem 0rem;
+  padding: 2rem;
+  border-radius: 2rem 0rem;
+}
+
+form {
+  margin: auto;
+  align-content: center;
+}
+
+table {
+  margin: auto;
+  border-spacing: 2rem;
+}
+
+th, td {
+  padding: 1rem;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  margin: 2.4rem;
+}
+
+h1 {
+  font-size: 3.6rem;
+}
+
+h2, h3 {
+  font-size: 2.4rem;
+}
+
+h4 {
+  font-size: 2rem;
+  text-align: center;
+}
+
+h3 {
+  margin: 0rem;
+  margin-bottom: 2rem;
+}
+
+p {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 1.6rem;
+  margin: 2.4rem;
+}
+
+.t-c {
+  text-align: center;
+}
+
+img {
+  margin: auto;
+  padding-top: 2.4rem;
 }
 
 header {
@@ -97,12 +179,14 @@ nav {
 }
 
 .g-navbar {
-  grid-column: 3;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  gap: 2.4rem;
   grid-template-areas: "head head nav";
 }
 
 .g-pre {
   grid-area: press;
+  align-content: center;
 }
 
 .g-pic {
@@ -110,14 +194,15 @@ nav {
 }
 
 .g-2obj {
-  grid-column: 3;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  gap: 2.4rem;
   grid-template-areas: "press press picture";
-  gap: 0rem 2.4rem;
 }
 
 .g-3 {
   grid-template-columns: auto auto auto;
   gap: 2.4rem;
+  justify-content: space-around;
 }
 
 .width {
@@ -129,4 +214,25 @@ nav {
   flex-direction: column;
   align-content: center;
   align-items: center;
+}
+
+.presenter {
+  padding: 0rem;
+}
+
+.content {
+  width: 280px;
+  height: 316px;
+  margin-bottom: 2rem;
+  align-items: center;
+  align-content: center;
+}
+
+.pic {
+  width: 360px;
+  height: 437px;
+}
+
+.j-c {
+  justify-content: center;
 }/*# sourceMappingURL=main.css.map */
