--- a/Media/styles/components/_media.scss
+++ b/Media/styles/components/_media.scss
@@ -2,3 +2,9 @@ img{
     margin: auto;
     padding-top: 2.4rem;
 }
+
+.p-pic{
+    margin: 2rem;
+    padding-top: 0rem;
+    border-radius: 1rem 0rem;
+}
