--- a/Media/styles/layout/_container.scss
+++ b/Media/styles/layout/_container.scss
@@ -21,10 +21,14 @@
 }
 
 .pic {
-    width: 360px;
+    width: 320px;
     height: 437px;
 }
 
+.corner-1-3{
+    padding: 2rem;
+    border-radius: 2rem 0rem;
+}
 .j-c{
     justify-content: center;
 }
