--- a/Media/styles/base/_main.scss
+++ b/Media/styles/base/_main.scss
@@ -2,7 +2,7 @@ html{
     font-size:62.5%
 }
 body{
-    background-image: url('/Media/Pictures/background.jpg');
+    background-image: url('../Pictures/background.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: top;
