--- a/Media/styles/main.css
+++ b/Media/styles/main.css
@@ -67,8 +67,17 @@ body {
   text-align: left;
 }
 
+main {
+  margin-top: 14rem;
+}
+
+@media screen and (max-width: 760px) {
+  main {
+    margin-top: 22rem;
+  }
+}
 .gradient {
-  background: linear-gradient(0deg, rgba(40, 40, 43, 0) 25%, rgba(255, 255, 255, 0.75) 100%);
+  background: linear-gradient(0deg, rgba(40, 40, 43, 0) 5%, rgba(255, 255, 255, 0.75) 100%);
 }
 
 .blk-100 {
@@ -83,6 +92,10 @@ body {
   background-color: rgba(237, 237, 242, 0.75);
 }
 
+.or-75 {
+  background-color: rgba(254, 102, 1, 0.75);
+}
+
 .t-blk-100 {
   color: #28282b;
 }
@@ -91,15 +104,36 @@ body {
   color: rgba(254, 102, 1, 0.75);
 }
 
+.b-sha {
+  box-shadow: 8px 4px 8px rgba(40, 40, 43, 0.75);
+}
+
 section {
   margin: 2.4rem 0rem;
   padding: 2rem;
   border-radius: 2rem 0rem;
 }
 
+.scr-mar {
+  scroll-margin-top: 12rem;
+}
+
+@media screen and (max-width: 760px) {
+  .scr-mar {
+    scroll-margin-top: 22rem;
+  }
+}
 form {
+  width: 242px;
   margin: auto;
   align-content: center;
+  font-style: inherit;
+}
+
+input {
+  width: 100%;
+  padding: 0.1rem;
+  border-radius: 0.5rem 0rem;
 }
 
 table {
@@ -160,8 +194,26 @@ img {
   border-radius: 1rem 0rem;
 }
 
+.nav-b {
+  width: 64px;
+  height: 32px;
+  margin: auto;
+  padding: 0rem;
+  border-radius: 1rem 0rem;
+  color: #28282b;
+  font-size: 1.6rem;
+}
+
+.nav-b:hover {
+  color: rgba(237, 237, 242, 0.75);
+}
+
+a {
+  margin: auto;
+}
+
 header {
-  margin: 2.4rem 0rem;
+  margin: 0rem 0rem 2.4rem 0rem;
 }
 
 footer {
@@ -169,7 +221,10 @@ footer {
 }
 
 nav {
-  margin: 2.4rem;
+  width: 360px;
+  margin: 2.4rem 0rem;
+  text-align: center;
+  align-content: center;
 }
 
 .grid {
@@ -178,6 +233,7 @@ nav {
 
 .g-h {
   grid-area: head;
+  padding-left: 2rem;
 }
 
 .g-n {
@@ -211,6 +267,41 @@ nav {
   justify-content: space-around;
 }
 
+@media screen and (max-width: 760px) {
+  .g-navbar {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+    gap: 1.2rem;
+    grid-template-areas: "head" "nav";
+    justify-content: space-around;
+  }
+  .g-2obj {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+    grid-template-areas: "picture" "press";
+    justify-content: space-around;
+  }
+  .g-3 {
+    grid-template-columns: auto;
+    gap: 2.4rem;
+    justify-content: space-around;
+  }
+}
+@media screen and (max-width: 1130px) and (min-width: 761px) {
+  .g-navbar {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    gap: 1.2rem;
+    grid-template-areas: "head nav";
+    justify-content: space-around;
+  }
+  .g-2obj {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    grid-template-areas: "press picture";
+  }
+  .g-3 {
+    grid-template-columns: auto auto;
+    gap: 2.4rem;
+    justify-content: space-around;
+  }
+}
 .width {
   width: 1128px;
 }
@@ -218,6 +309,13 @@ nav {
 .flex {
   display: flex;
   flex-direction: column;
+  align-content: center;
+  align-items: center;
+}
+
+.flex-r {
+  display: flex;
+  flex-direction: row;
   align-content: center;
   align-items: center;
 }
@@ -246,4 +344,19 @@ nav {
 
 .j-c {
   justify-content: center;
+}
+
+.fixed {
+  position: fixed;
+}
+
+@media screen and (max-width: 1130px) and (min-width: 761px) {
+  .width {
+    width: 776px;
+  }
+}
+@media screen and (max-width: 760px) {
+  .width {
+    width: 360px;
+  }
 }/*# sourceMappingURL=main.css.map */
