--- a/Media/styles/base/_main.scss
+++ b/Media/styles/base/_main.scss
@@ -11,3 +11,13 @@ body{
     background-color: #28282B;
     text-align: left;
 }
+
+main{
+    margin-top: 14rem;
+}
+
+@media screen and (max-width: 760px){
+    main{
+        margin-top: 22rem;
+    }
+}
