--- a/Media/styles/components/_form.scss
+++ b/Media/styles/components/_form.scss
@@ -1,4 +1,12 @@
 form{
+    width: 242px;
     margin: auto;
     align-content: center;
+    font-style: inherit;
+}
+
+input{
+    width: 100%;
+    padding: 0.1rem;
+    border-radius: 0.5rem 0rem;
 }
