--- a/Media/styles/components/_sections.scss
+++ b/Media/styles/components/_sections.scss
@@ -4,3 +4,12 @@ section{
     border-radius: 2rem 0rem;
 }
 
+.scr-mar{
+    scroll-margin-top: 12rem;
+}
+
+@media screen and (max-width: 760px){
+    .scr-mar{
+        scroll-margin-top: 22rem;
+    }
+}
