--- a/Media/styles/main.css
+++ b/Media/styles/main.css
@@ -71,11 +71,6 @@ main {
   margin-top: 14rem;
 }
 
-@media screen and (max-width: 760px) {
-  main {
-    margin-top: 22rem;
-  }
-}
 .gradient {
   background: linear-gradient(0deg, rgba(40, 40, 43, 0) 5%, rgba(255, 255, 255, 0.75) 100%);
 }
@@ -108,6 +103,61 @@ main {
   box-shadow: 8px 4px 8px rgba(40, 40, 43, 0.75);
 }
 
+@media screen and (max-width: 760px) {
+  main {
+    margin-top: 22rem;
+  }
+}
+@media screen and (max-width: 760px) {
+  .scr-mar {
+    scroll-margin-top: 22rem;
+  }
+}
+@media screen and (max-width: 1130px) and (min-width: 761px) {
+  .width {
+    width: 776px;
+  }
+}
+@media screen and (max-width: 760px) {
+  .width {
+    width: 360px;
+  }
+}
+@media screen and (max-width: 760px) {
+  .g-navbar {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+    gap: 1.2rem;
+    grid-template-areas: "head" "nav";
+    justify-content: space-around;
+  }
+  .g-2obj {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+    grid-template-areas: "picture" "press";
+    justify-content: space-around;
+  }
+  .g-3 {
+    grid-template-columns: auto;
+    gap: 2.4rem;
+    justify-content: space-around;
+  }
+}
+@media screen and (max-width: 1130px) and (min-width: 761px) {
+  .g-navbar {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    gap: 1.2rem;
+    grid-template-areas: "head nav";
+    justify-content: space-around;
+  }
+  .g-2obj {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    grid-template-areas: "press picture";
+  }
+  .g-3 {
+    grid-template-columns: auto auto;
+    gap: 2.4rem;
+    justify-content: space-around;
+  }
+}
 section {
   margin: 2.4rem 0rem;
   padding: 2rem;
@@ -118,11 +168,6 @@ section {
   scroll-margin-top: 12rem;
 }
 
-@media screen and (max-width: 760px) {
-  .scr-mar {
-    scroll-margin-top: 22rem;
-  }
-}
 form {
   width: 242px;
   margin: auto;
