--- a/Media/styles/base/_main.scss
+++ b/Media/styles/base/_main.scss
@@ -1,5 +1,7 @@
+/*Main items*/
 html{
-    font-size:62.5%
+    font-size:62.5%;
+    scroll-padding-top: 1px;
 }
 body{
     background-image: url('../Pictures/background.jpg');
