--- a/Media/styles/components/_form.scss
+++ b/Media/styles/components/_form.scss
@@ -10,3 +10,9 @@ input{
     padding: 0.1rem;
     border-radius: 0.5rem 0rem;
 }
+textarea{
+    width: 100%;
+    padding: 0.1rem;
+    border-radius: 0.5rem 0rem;
+    font-style: inherit;
+}
