--- a/Media/styles/components/_index.scss
+++ b/Media/styles/components/_index.scss
@@ -1,8 +1,7 @@
-@forward 'article';
+/*forwards the partials to main*/
 @forward 'sections';
 @forward 'form';
 @forward 'table';
 @forward 'text';
 @forward 'media';
 @forward 'buttons';
-@forward 'links';
