--- a/Media/styles/layout/_container.scss
+++ b/Media/styles/layout/_container.scss
@@ -1,3 +1,5 @@
+/*Containers and layout classes flexboxes included here*/
+
 .width{
     width: 1128px;
 }
@@ -42,16 +44,6 @@
 
 .fixed{
     position: fixed;
+    z-index: 1000;
 }
-
- @media screen and (max-width: 1130px) and (min-width: 761px){
-    .width{
-        width: 776px;
-    }
- }
- @media screen and (max-width: 760px){
-    .width{
-        width: 360px;
-    }
- }
 
