--- a/Media/styles/abstract/_colors.scss
+++ b/Media/styles/abstract/_colors.scss
@@ -11,6 +11,9 @@
 .blk-75{
     background-color: rgba($color: #28282B, $alpha: 0.75);
 }
+.wt-100{
+    background-color: rgba($color: #EDEDF2, $alpha: 1);
+}
 .wt-75{
     background-color: rgba($color: #EDEDF2, $alpha: 0.75);
 }
