--- a/Media/styles/components/_form.scss
+++ b/Media/styles/components/_form.scss
@@ -7,12 +7,23 @@ form{
 
 input{
     width: 100%;
+    margin: 0.5rem;
+    margin-left: 0rem;
     padding: 0.1rem;
     border-radius: 0.5rem 0rem;
 }
 textarea{
     width: 100%;
+    margin: 0.5rem;
+    margin-left: 0rem;
     padding: 0.1rem;
     border-radius: 0.5rem 0rem;
     font-style: inherit;
+}
+label{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 1.2rem;
+    padding: 0.2rem;
+    margin: 1rem;
+    margin-left: 0rem;
 }
