--- a/Media/styles/main.css
+++ b/Media/styles/main.css
@@ -96,15 +96,27 @@ form {
 
 input {
   width: 100%;
+  margin: 0.5rem;
+  margin-left: 0rem;
   padding: 0.1rem;
   border-radius: 0.5rem 0rem;
 }
 
 textarea {
   width: 100%;
+  margin: 0.5rem;
+  margin-left: 0rem;
   padding: 0.1rem;
   border-radius: 0.5rem 0rem;
   font-style: inherit;
+}
+
+label {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 1.2rem;
+  padding: 0.2rem;
+  margin: 1rem;
+  margin-left: 0rem;
 }
 
 /*layout for tables:*/
@@ -335,6 +347,10 @@ nav {
 
 .blk-75 {
   background-color: rgba(40, 40, 43, 0.75);
+}
+
+.wt-100 {
+  background-color: #ededf2;
 }
 
 .wt-75 {
